fix issues with controller